# fastapi-with-otel

./: Makefile  README.md  cloudbuild.yaml  pyproject.toml
app/src/: main.py
app/src/config/: env.py  gunicorn.py  middleware.py  opentelemetry.py
app/src/router/: sample.py
docker/deploy/containers/app/: Dockerfile  sitecustomize.py
docker/local/: compose.env  docker-compose.yml
docker/local/containers/app/: Dockerfile  sitecustomize.py
requirements/: requirements-dev.txt  requirements.txt
src/: main.py
src/routers/: hoge.py
tests/: test_hoge.py  test_sample.py
