[tool.poetry]
name = "otel-with-fastapi"
version = "0.1.0"
description = "This is the applition that implements otel with fastapi"
authors = ["taxin <burlonent@gmail.com>"]
license = "MIT"
readme = "README.md"

include = [
  "CHANGES.rst",
  "docs",
  "poetry.lock",
  "tests",
  "tox.ini",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
requests = "^2.27.1"
opentelemetry-instrumentation-fastapi = "^0.35b0"
opentelemetry-sdk = "^1.14.0"
opentelemetry-exporter-gcp-trace = "^1.3.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.3"
tox = "^3.24.5"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
watchfiles = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
